# HDL-Sim

./: .gitignore  AGENTS.md  HANDOFF_PLAN.md  README.md  pyproject.toml  start-ui-dev.bat  start-ui.bat  start-ui.command  start-ui.sh  start-ui.vbs  start_ui.py  start_ui_gui.pyw
docs/: ANTIGRAVITY_HANDOFF.md  FILTER_ASSIGNMENT_VERIFY.md  LEGACY_EXAMPLES.md  LOCAL_DEBUG_HANDOFF.md  SUPPORTED_SUBSET.md  TUTORIAL_SPEC.md  UI_QUICKSTART.md  architecture.md  universal-development-prompts.md
examples/: and_gate.v  clock.v  counter.v  full_tb.v  hierarchy.v  lfsr8.v  param_counter.v  reflex_game_tp.v  seg7_decoder.v  silos_regression.v  tb_multi.v
packaging/: INSTALL_README.txt  SIGNING.md  UNINSTALL_README.txt  build_installer.bat  build_mac.sh  build_mac_zip.sh  build_portable.bat  build_portable.ps1  build_windows.bat  build_zip.bat  download_webview2.bat  hdl_sim_setup.iss  hdl_sim_ui.spec  inno_sign.ps1  pyi_rth_cwd.py  pyi_rth_stdio.py  sign_file.ps1
scripts/: seed_spj_from_examples.py
spj/: README.md  alu-test.spj  api_demo.spj  dicetest.spj  movefilter.spj  saikoro.spj  shimohure.spj  shimohure2.spj  silos_analog.spj  silos_code_coverage.spj  silos_code_coverage2.spj  silos_fltsim.spj  silos_gate.spj  silos_vending.spj  test-casex_router.spj  test-fork_join.spj  test-fsm.spj  test-generate_tree.spj  test-shift.spj  test-task_func.spj  test4add.spj  testDFF.spj  testTFF.spj  testcounter.spj  testes.spj  toshima.spj  watch.spj
tests/: test_advanced.py  test_ansi_ports.py  test_comprehensive.py  test_core.py  test_crash_log.py  test_error_messages.py  (+39 more)
(+149 files in other folders)
