[tool.poetry]
name = "hdl-sim"
version = "0.5.19"
description = "A lightweight event-driven Verilog HDL simulator with VCD output."
authors = ["Cursor Agent <cursor@example.com>"]
readme = "README.md"
packages = [{ include = "hdl_sim", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
lark = "1.2.2"
fastapi = ">=0.115,<1.0"
uvicorn = { version = ">=0.32,<1.0", extras = ["standard"] }
pywebview = { version = ">=5.0,<6.0", optional = true }

[tool.poetry.extras]
desktop = ["pywebview"]

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0,<10.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.poetry.scripts]
hdl-sim = "hdl_sim.cli:main"
hdl-sim-ui = "hdl_sim.web:main"
